# PIA

./: README.md  pyproject.toml  requirements.txt
scripts/: install_analyzer.sh  submit_analysis.sh
src/complex_analyzer/: __init__.py  __main__.py  analyzer.py  cli.py  constants.py  foldx_metrics.py  prodigy_metrics.py  rosetta_metrics.py  secondary_structure.py  sequence.py  structure.py
tests/: test_analyzer.py
